<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/image"
            android:layout_height="@dimen/image"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:civ_border="true"
            app:civ_border_color="@color/gray"
            app:civ_border_width="@dimen/two_dp"
            app:srcCompat="@drawable/default_avatar" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingbar"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space3x"
            android:isIndicator="false"
            android:numStars="5"
            android:theme="@style/RatingBar" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space3x"
            android:hint="@string/hint_write_a_review"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/hint_write_a_review" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space3x">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/value_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/post_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/value_post" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>